syntax = "proto3";

option go_package = "roller/rollerService/";
option java_multiple_files = true;

package rollerService;

message RollerRequest {
  string name = 1;
}

message RollerReply {
  string message = 1;
  string total = 2;
  int64 playerScore = 3;
  int64 aiScore = 4;
  bool playerWins = 5;
}

service Roller {
  rpc Roll (RollerRequest) returns (RollerReply) {}
}